Start working on UI prototype, start working on data source class, add a 3D model to UI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ qt_add_executable(${CMAKE_PROJECT_NAME}
     src/locationdto.h
     src/alertsdto.h
     src/weatherdto.h
+    src/datasource.h
+    src/datasource.cpp
 )
 
 # qt_standard_project_setup() requires Qt 6.3 or higher. See https://doc.qt.io/qt-6/qt-standard-project-setup.html for details.
