Add preview 3D effects to the 3D environment.

--- a/content/CMakeLists.txt
+++ b/content/CMakeLists.txt
@@ -20,6 +20,12 @@ qt6_add_qml_module(content
         Countries.ui.qml
         App.qml
     RESOURCES
+        splash7.png
+        sphere.png
+        snowflake.png
+        smoke2.png
+        ripple.png
+        rain.png
         images/searchIcon.svg
         images/cloud.svg
 
